[gd_scene load_steps=2 format=3 uid="uid://c3s2qq70nkh3o"]

[ext_resource type="Script" path="res://scripts/end_level.gd" id="1_2jxkx"]

[node name="End Level" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jxkx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 651.0
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -29.5
offset_right = 20.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Level Complete"
horizontal_alignment = 1

[node name="Next Level" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Next Level"

[node name="Replay Level" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Restart"

[node name="Menu" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="GridContainer/Next Level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="GridContainer/Replay Level" to="." method="_on_replay_level_pressed"]
[connection signal="pressed" from="GridContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="GridContainer/Menu" to="." method="_on_main_menu_pressed"]
